--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "jest": "^28.1.3"
   },
   "dependencies": {
-    "dotenv": "^16.0.1"
+    "dotenv": "^16.0.1",
+    "node-google-translate-skidz": "^1.1.2"
   }
 }
