--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "node ./src/index.js",
     "start": "./cli.js",
     "test": "jest",
-    "test-msg": "node ./test/message-test.js"
+    "test-msg": "node ./test/message-test.js",
+    "test-audio": "jest ./test/download-audio.test.js"
   },
   "devDependencies": {
     "jest": "^28.1.3"
